# terminal-toys

./: .gitignore  README.md
antcolony/: Cargo.toml  README.md
antcolony/src/: main.rs
aquarium/: Cargo.toml  README.md
aquarium/src/: main.rs
ascii_raymarch/: Cargo.toml  README.md
ascii_raymarch/src/: main.rs
aurora/: Cargo.toml  README.md
aurora/src/: main.rs
boids/: Cargo.toml  README.md
boids/src/: main.rs
cmatrix2/: Cargo.toml  README.md
cmatrix2/src/: main.rs
fluidlite-braille/: Cargo.toml  README.md
fluidlite-braille/src/: main.rs
fountain/: Cargo.toml  README.md
fountain/src/: main.rs
frogger/: Cargo.toml  README.md
frogger/src/: main.rs
grayscott/: Cargo.toml  README.md
grayscott/src/: main.rs
lavalamp/: Cargo.toml
lavalamp/src/: main.rs
lunarlander/: Cargo.toml  README.md
lunarlander/src/: main.rs
mazewalker/: Cargo.toml  README.md
mazewalker/src/: main.rs
newton/: Cargo.toml  LICENSE  README.md
newton/src/: main.rs
orrery/: Cargo.toml  README.md
orrery/src/: main.rs
pipes/: Cargo.toml  README.md
pipes/src/: main.rs
planetarium/: .gitignore  Cargo.toml  README.md
planetarium/src/: main.rs
plasmaglobe/: Cargo.toml  README.md
plasmaglobe/src/: main.rs
retrowave/: Cargo.toml  README.md
starfield/: Cargo.toml  README.md
tenprint/: Cargo.toml  README.md
termigotchi/: Cargo.toml  README.md
termpath/: Cargo.toml  README.md
terrarium-braille/: Cargo.toml  README.md
unsinkable/: Cargo.toml  README.md
voronoi/: Cargo.toml  README.md
weather/: Cargo.toml  README.md
weather/src/: main.rs
(+17 files in other folders)
